<resources>
    <string name="app_name">همة انجاز</string>
    <string name="title_activity_profile">Profile</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="chk_riad">مكتب الرياض</string>
    <string name="chk_bngasm">مكتب بن جاسم</string>
    <string name="chk_abofahd">مكتب ابوفهد </string>
    <string name="chk_alwkeel">مكتب الوكيل </string>
    <string name="chk_elmr">مكتب المر </string>
    <string name="chk_bnomar">مكتب بن عمار </string>


    <string name="radio_riad">مكتب الرياض</string>
    <string name="radio_bngasm">مكتب بن جاسم</string>
    <string name="radio_abofahd">مكتب ابوفهد </string>
    <string name="radio_alwkeel">مكتب الوكيل </string>
    <string name="radio_elmr">مكتب المر </string>
    <string name="radio_bnamar">مكتب بن عمار </string>


    <string name="action_settings">Settings</string>

    <string name="GOOGLE_MAPS_API_KEY">AIzaSyD6NHGNbSFoCY4XtdNLFx5mzi25XmujIng</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_result">Search Results</string>
    <string name="add_srv_u_want">Please add the place you want</string>
    <string name="logout">logout</string>
    <string name="login">Login...</string>
    <string name="offer">Offers</string>
    <string name="done">done</string>
    <string name="office_work_service">Labor office services</string>
    <string name="evaluation_search">Evaluation search</string>
    <string name="search_by_place">Search by place</string>
    <string name="add_service">Add service</string>
    <string name="forget_pass">Forget Password ?</string>
    <string name="username">Username</string>
    <string name="pass">Password</string>
    <string name="login_text">Log In</string>
    <string name="no_account">Don\'t have an account yet? </string>
    <string name="create_one">Create one.</string>
    <string name="welcome">Welcome to Hemtt el enjaz</string>
    <string name="remember_me">Remember me</string>
    <string name="client_need_service">client wants a service</string>
    <string name="service_provider">Service Provider</string>
    <string name="service">Services</string>
</resources>
